--- a/DoubledPennyCalculator/DoubledPennyCalculator/DoubledPennyCalculator.csproj
+++ b/DoubledPennyCalculator/DoubledPennyCalculator/DoubledPennyCalculator.csproj
@@ -63,6 +63,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Calculate.cs" />
+    <Compile Include="DayRangeRule.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
